# code-kata

./: .gitignore  README.md
sudoku-solver/: CMakeLists.txt  README.md
sudoku-solver/include/: sudoku.h
sudoku-solver/src/: CMakeLists.txt  main.c  sudoku.c
tic-tac-toe/: CMakeLists.txt  README.md
tic-tac-toe/include/: tic_tac_toe.h
tic-tac-toe/src/: CMakeLists.txt  tic_tac_toe.c
tic-tac-toe/test/: CMakeLists.txt  seatest.h  tic_tac_toe_game_draw_test_suite.c  tic_tac_toe_game_draw_test_suite.h  tic_tac_toe_illegal_state_test_suite.c  tic_tac_toe_illegal_state_test_suite.h  tic_tac_toe_next_turn_test_suite.c  tic_tac_toe_next_turn_test_suite.h  tic_tac_toe_o_win_test_suite.c  tic_tac_toe_o_win_test_suite.h  tic_tac_toe_test.c  tic_tac_toe_test.h  tic_tac_toe_x_win_test_suite.c  tic_tac_toe_x_win_test_suite.h  unit_tests.c
